<resources>
    <string name="app_name">Easy Chat</string>
    <string name="no_users_found">No users found!</string>
    <string name="login">Login</string>
    <string name="enter_username">enter username</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="write_a_message">Type a message</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_password">enter_password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="email">Email or Username</string>
    <string name="main_logo">Main_logo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_am_already_member">I am already member</string>

</resources>
